# eink-dashboard

./: .env.example  .gitignore  Makefile  README.md  SKILL.md  config.py  context_providers.py  critic.py  generate.py  generator.py  pyproject.toml  requirements.txt  server.py  template_registry.py
static/: index.html
templates/: minimal.html  schedule.html  stats.html  weather.html
