[project]
name = "eink-dashboard"
version = "0.1.0"
description = "E-Ink dashboard generator with LLM-powered template system"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "playwright>=1.40.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
eink-generate = "generate:main"
eink-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
